--- a/myhockeyapp/views/game_list.pug
+++ b/myhockeyapp/views/game_list.pug
@@ -59,7 +59,10 @@ block content
                 div.modal-header
                     button.close(type="button" data-dismiss="modal" aria-label="Close")
                         span(aria-hidden="true") &times;
-                    h4#scheduleGameModalLabel.mdoal-title Schedule Game
+                    h4#scheduleGameModalLabel.modal-title 
+                        i.fa.fa-calendar-plus-o
+                        |     
+                        | Schedule Game
                 form#scheduleGameForm.form-horizontal(name='game_schedule' method='post' action='/gameentry/add')
                     div.modal-body
                         div.form-group
