--- a/myhockeyapp/views/team_stats_shutouts.pug
+++ b/myhockeyapp/views/team_stats_shutouts.pug
@@ -39,7 +39,7 @@ block content
                     a(href="/teamstats") 
                         | Team Stats
                 li
-                    i.fa.fa-smile-o
+                    i.fa.fa-star-o
                         | 
                         | Shutouts
     div.row
