--- a/myhockeyapp/views/team_stats_ties.pug
+++ b/myhockeyapp/views/team_stats_ties.pug
@@ -39,7 +39,7 @@ block content
                     a(href="/teamstats") 
                         | Team Stats
                 li
-                    i.fa.fa-smile-o
+                    i.fa.fa-meh-o
                         | 
                         | Ties
     div.row
