ui minor changes

--- a/myhockeyapp/views/index.pug
+++ b/myhockeyapp/views/index.pug
@@ -175,7 +175,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |Goal Leaders
+                    |Top Goals
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-goalleaders.table.table-bordered.table-hover.table-striped
@@ -192,7 +192,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |PowerPlay Goal Leaders
+                    |Top PowerPlay Goals
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-ppgleaders.table.table-bordered.table-hover.table-striped
@@ -208,7 +208,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |ShortHand Goal Leaders
+                    |Top ShortHand Goals
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-shgleaders.table.table-bordered.table-hover.table-striped
@@ -224,7 +224,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |EmptyNet Goal Leaders
+                    |Top EmptyNet Goals
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-engleaders.table.table-bordered.table-hover.table-striped
@@ -242,7 +242,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |Assist Leaders
+                    |Top Assists
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-assistleaders.table.table-bordered.table-hover.table-striped
@@ -259,7 +259,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |Points Leaders
+                    |Top Total Points
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-pointleaders.table.table-bordered.table-hover.table-striped
@@ -276,7 +276,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |PIM Leaders
+                    |Top Penalty In Minutes
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-pimleaders.table.table-bordered.table-hover.table-striped
@@ -292,7 +292,7 @@ block content
         div.col-lg-3.col-md-6
             div.panel.panel-default
                 div.panel-heading
-                    |Goalie Leaders
+                    |Top Goals Against Average
                 div.panel-body
                     div.dataTable_wrapper
                         table#datatable-gaolieleaders.table.table-bordered.table-hover.table-striped
