--- a/myhockeyapp/views/game_timeline.pug
+++ b/myhockeyapp/views/game_timeline.pug
@@ -50,7 +50,7 @@ block content
             div.panel.panel-default
                 div.panel-heading
                     i.fa.fa-clock-o.fa-fw
-                    | Responsive Timeline
+                    | Timeline
                 div.panel-body
                     ul.timeline
                         each game_event in game_events
